--- a/src/assets/scss/base/font.scss
+++ b/src/assets/scss/base/font.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Noto+Sans+TC:wght@100;300;800;900&family=Rampart+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Noto+Sans+TC:wght@100;200;300;400;500;600;700;800;900&family=Rampart+One&display=swap');
+
 
 //   font-family: 'Koulen', sans-serif;
 //   font-family: 'Noto Sans TC', sans-serif;
@@ -40,7 +41,7 @@ h2 {
 h3 {
 
     font-size: $h3;
-    font-weight: 520;
+    font-weight: 500;
     line-height: 36px;
     font-family: 'Noto Sans TC', sans-serif;
 }
@@ -48,7 +49,7 @@ h3 {
 h4 {
 
     font-size: $h4 ;
-    font-weight: 520;
+    font-weight: 500;
     line-height: 28px;
     font-family: 'Noto Sans TC', sans-serif;
 }
@@ -58,14 +59,32 @@ h4 {
     font-family: 'Noto Sans TC', sans-serif;
     font-size: 18px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 20px;
+
+}
+
+.label_footer {
+
+    font-family: 'Noto Sans TC', sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 28px;
+
+}
+
+.enter_year {
+        font-family: "Rampart One";
+        font-size: 48px;
+        color: $gray_font_color;
+        text-align: center;
 
 }
 
 .button_check {
 
-    width: 379px;
+    width: 345px;
     height: 100px;
     background-color: #ffffff;
     color: map-get($accent_color, accent_color2);
@@ -75,6 +94,26 @@ h4 {
     border: 5px solid map-get($accent_color, accent_color2);
     box-shadow: 9px 8px 0px 0px #6c96ca94;
     cursor: pointer;
+
+
+}
+
+.button_check:hover {
+    transition: transform 0.3s ease;
+    transform: translate(7px, 7px);
+    background-color: map-get($accent_color, accent_color2); /* 替换为悬停时的背景颜色 */
+    color: #ffffff; /* 替换为悬停时的文字颜色 */
+    border-color:#fff; /* 替换为悬停时的边框颜色 */
+    box-shadow:none;
+  
+}
+
+.nav-link {
+    text-decoration: none;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 800;
+    color: map-get($accent_color, accent_color2);
+
 
 
 }
