--- a/src/assets/scss/base/font.scss
+++ b/src/assets/scss/base/font.scss
@@ -24,7 +24,7 @@ $sm-font : 14px;
 h1 {
 
     font-size: $h1;
-    line-height: 70.5px;
+    line-height: 30px;
     letter-spacing: 3%;
     font-weight: 800;
     font-family: 'Noto Sans TC', sans-serif;
@@ -33,7 +33,7 @@ h1 {
 h2 {
 
     font-size: $h2;
-    line-height: 56px;
+    line-height: 30px;
     font-weight: 800;
     font-family: 'Noto Sans TC', sans-serif;
 }
@@ -83,6 +83,7 @@ h4 {
 }
 
 .button_check {
+;
 
     width: 345px;
     height: 100px;
