--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,3 +2,9 @@
 @import "@/assets/scss/base/color.scss";
 @import "@/assets/scss/base/font.scss";
 
+html,body{
+    padding: 0;
+    margin: 0;
+
+}
+
