--- a/src/assets/scss/base/font.scss
+++ b/src/assets/scss/base/font.scss
@@ -111,15 +111,17 @@ h4 {
 
 .nav_link_top,
 .nav_link_bottom {
+
     width: 100%;
-    display: inline-block;
+   
     text-decoration: none;
     font-family: 'Noto Sans TC', sans-serif;
     font-weight: 800;
     line-height: 30px;
     color: map-get($accent_color, accent_color2);
 
-
+    border: 4px solid#850d0d;
+   c
 
 }
 
