--- a/src/assets/scss/base/font.scss
+++ b/src/assets/scss/base/font.scss
@@ -112,37 +112,20 @@ h4 {
 .nav_link_top,
 .nav_link_bottom {
 
-
-    
- 
+    // border: 4px solid#850d0d;
+    width: 80%;
+    display: inline-block;
     text-decoration: none;
     font-family: 'Noto Sans TC', sans-serif;
     font-weight: 800;
     line-height: 30px;
     color: map-get($accent_color, accent_color2);
 
-    border: 4px solid#850d0d;
-
-    display:inline-block;
-
-}
-
-
-
-.nav_link_top {
-
-    width: 60%;
-    display:inline-block;
-    
-
 }
 
 
 .nav_link_bottom {
-    width: 60%;
-
+    // border: 4px solid#2d0d85;
     text-align: right;
-
-    border: 4px solid#2d0d85;
 
 }
