--- a/src/assets/scss/base/font.scss
+++ b/src/assets/scss/base/font.scss
@@ -82,6 +82,16 @@ h4 {
 
 }
 
+
+
+
+
+// component-----------------------
+
+
+
+
+
 .button_check {
 
 
@@ -98,6 +108,8 @@ h4 {
 
 
 }
+
+
 
 .button_check:hover {
     transition: transform 0.3s ease;
