--- a/src/assets/scss/base/font.scss
+++ b/src/assets/scss/base/font.scss
@@ -140,14 +140,14 @@ h4 {
     padding: 0px 20px 20px 20px;
     border: 1px solid#000000;
     border-radius: 30px;
-    background: linear-gradient(180deg, #d0eaff 0%, rgba(208, 234, 255, 0) 100%),
-        var(--gray-colors-white, #fff);
+    background: linear-gradient(180deg, #d0eaffcc 0%, rgba(208, 234, 255, 0) 100%),
+        var(--gray-colors-white, #ffffff69);
     stroke-width: 1px;
     stroke: #000;
     filter: drop-shadow(0px 4px 4px #adbbff);
     display: inline-block;
-    
-  
+
+
 
     p {
         padding-left: 5px;
@@ -165,7 +165,8 @@ h4 {
         // border: 1px solid#d44b4b;
         font-family: "Noto Sans TC";
         font-weight: 500;
-   
+        font-size: 30px;
+
     }
 
 
@@ -176,11 +177,6 @@ h4 {
         display: flex;
         align-items: center;
 
-        .hover_container>img {
-            border: 1px solid#156cf0;
-            width: 25px;
-            height: 25px;
-        }
 
         .bar {
             // border: 1px solid#fd29e1;
@@ -210,4 +206,16 @@ h4 {
         }
 
     }
+
+    .hover_container > img {
+        // border: 1px solid #156cf0;
+        width: 45px;
+        height: 45px;
+      }
+      
+      .bar img {
+        // border: 1px solid #156cf0;
+        width: 105px;
+        height: 15px;
+      }
 }
